cambios en la cabecera del blogspot

--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,12 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <h1>Aqui vamos hacer un blogspot</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo sequi aspernatur nemo, amet ipsum corrupti ducimus non nihil quo! Eaque, natus quisquam sapiente aperiam maxime impedit culpa aliquid expedita laborum.</p>
+    <div id="container">
+        <div id="post">
+            <h1>Aqui vamos hacer un blogspot</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo sequi aspernatur nemo, amet ipsum corrupti ducimus non nihil quo! Eaque, natus quisquam sapiente aperiam maxime impedit culpa aliquid expedita laborum.</p>
+        </div>
+    </div>
+    
 </body>
 </html>
