--- a/blogpost.html
+++ b/blogpost.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <div id="container">
+        <div class="cabecera">
+            <h2>Cabecera</h2>
+        </div>
         <div id="post">
             <h1>Aqui vamos hacer un blogspot</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo sequi aspernatur nemo, amet ipsum corrupti ducimus non nihil quo! Eaque, natus quisquam sapiente aperiam maxime impedit culpa aliquid expedita laborum.</p>
