Finalizado en la cabecera

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <div id="container">
-        <div class="cabecera">
-            <h2>Cabecera</h2>
+        <div id="cabecera">
+            Hyperblog
+            <span id="tagline">Tu blog de confianza</span>
         </div>
         <div id="post">
             <h1>Aqui vamos hacer un blogspot</h1>
