Agregado el contenido adicional y otra tipografia

--- a/blogpost.html
+++ b/blogpost.html
@@ -11,6 +11,7 @@
         <div id="post">
             <h1>Aqui vamos hacer un blogspot</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo sequi aspernatur nemo, amet ipsum corrupti ducimus non nihil quo! Eaque, natus quisquam sapiente aperiam maxime impedit culpa aliquid expedita laborum.</p>
+            <p>Los blog son la mejor forma de compartir contenido y tus ideas</p>
         </div>
     </div>
     
