--- a/blogpost.html
+++ b/blogpost.html
@@ -16,6 +16,7 @@
             <h1>Aqui vamos hacer un blogspot</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo sequi aspernatur nemo, amet ipsum corrupti ducimus non nihil quo! Eaque, natus quisquam sapiente aperiam maxime impedit culpa aliquid expedita laborum.</p>
             <p>Los blog son la mejor forma de compartir contenido y tus ideas</p>
+            <p>Suscribete</p>
         </div>
     </div>
     
