--- a/blogpost.html
+++ b/blogpost.html
@@ -13,7 +13,7 @@
             <span id="tagline">Tu blog de confianza</span>
         </div>
         <div id="post">
-            <h1>Aqui vamos hacer un blogspot</h1>
+            <h1>Bienvenido a Hyperblog</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo sequi aspernatur nemo, amet ipsum corrupti ducimus non nihil quo! Eaque, natus quisquam sapiente aperiam maxime impedit culpa aliquid expedita laborum.</p>
             <p>Los blog son la mejor forma de compartir contenido y tus ideas</p>
             <p>Suscribete</p>
