--- a/blogpost.html
+++ b/blogpost.html
@@ -9,6 +9,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
+            <img id="logo" src="./images/dragon.png" alt="">
             Hyperblog
             <span id="tagline">Tu blog de confianza</span>
         </div>
