Agregue una imagen al blog

--- a/blogpost.html
+++ b/blogpost.html
@@ -15,6 +15,10 @@
         </div>
         <div id="post">
             <h1>Bienvenido a Hyperblog</h1>
+            <figure>
+                <img src="images/naruto-team-7.jpg" alt="" width="100%">
+                <figcaption>Equipo 7</figcaption>
+            </figure>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo sequi aspernatur nemo, amet ipsum corrupti ducimus non nihil quo! Eaque, natus quisquam sapiente aperiam maxime impedit culpa aliquid expedita laborum.</p>
             <p>Los blog son la mejor forma de compartir contenido y tus ideas</p>
             <p>Suscribete</p>
