URL de la imagen corregida

--- a/blogpost.html
+++ b/blogpost.html
@@ -16,7 +16,7 @@
         <div id="post">
             <h1>Bienvenido a Hyperblog</h1>
             <figure>
-                <img src="https://drive.google.com/file/d/1euzY6AXG8DvmKh7b3dXH-5oOImUZJrsV/view?usp=sharing" alt="" width="100%">
+                <img src="https://drive.google.com/uc?id=1euzY6AXG8DvmKh7b3dXH-5oOImUZJrsV" alt="" width="100%">
                 <figcaption>Equipo 7</figcaption>
             </figure>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo sequi aspernatur nemo, amet ipsum corrupti ducimus non nihil quo! Eaque, natus quisquam sapiente aperiam maxime impedit culpa aliquid expedita laborum.</p>
